Refactor Java code structure: extract services and improve organization
Co-authored-by: FabiPunktExe <66797305+FabiPunktExe@users.noreply.github.com>